--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <!-- CSS Code -->
     <section class="css">
       <p id="code"></p>
-      <button ontouchstart="">Copy CSS Code</button>
+      <button type="button" ontouchstart="">Copy CSS Code</button>
     </section>
     <!-- Footer -->
     <footer>
